tdf#130610 docx export: handle bold as toggle properties

Change-Id: I4c60b7eab6430a64ea1c8bcf40d0036d0b38516f